--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/next": "^4.1.2",
     "@prisma/client": "^3.11.1",
     "next": "12.1.4",
+    "next-auth": "^4.3.3",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
