--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/hooks": "^4.1.2",
     "@mantine/next": "^4.1.2",
     "@prisma/client": "^3.11.1",
+    "axios": "^0.27.2",
     "next": "12.1.4",
     "next-auth": "^4.3.3",
     "react": "18.0.0",
