--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^4.1.2",
+    "@mantine/form": "^4.1.5",
     "@mantine/hooks": "^4.1.2",
     "@mantine/next": "^4.1.2",
     "@prisma/client": "^3.11.1",
