--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "semi": ["error", "always"],
-    "eol-last": ["error", "always"]
+    "eol-last": ["error", "always"],
+    "indent": ["error", 2]
   }
 }
