--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@mantine/form": "^4.1.5",
     "@mantine/hooks": "^4.1.2",
     "@mantine/next": "^4.1.2",
+    "@mantine/notifications": "^4.2.2",
     "@prisma/client": "^3.11.1",
     "axios": "^0.27.2",
+    "iron-session": "^6.1.3",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
