--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "semi": ["error", "always"],
     "eol-last": ["error", "always"],
-    "indent": ["error", 2]
+    "indent": ["error", 2],
+    "object-curly-spacing":  ["error", "always"]
   }
 }
