--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,10 @@
     "semi": ["error", "always"],
     "eol-last": ["error", "always"],
     "indent": ["error", 2],
-    "object-curly-spacing":  ["error", "always"]
+    "object-curly-spacing":  ["error", "always"],
+    "array-bracket-spacing": ["error", "always"],
+    "comma-dangle": ["error", "always-multiline"],
+    "no-trailing-spaces": ["error"],
+    "quotes": ["error", "single"]
   }
 }
