--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
     "array-bracket-spacing": ["error", "always"],
     "comma-dangle": ["error", "always-multiline"],
     "no-trailing-spaces": ["error"],
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "key-spacing": "error",
+    "comma-spacing": "error"
   }
 }
