--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://localhost/mydb"
 SUPERADMIN_NAME="admin"
 SUPERADMIN_PASSWORD="admin"
+COOKIE_ENCRYPT_KEY="complex_password_at_least_32_characters_long"
